--- a/Pages/Products.razor
+++ b/Pages/Products.razor
@@ -10,8 +10,8 @@
         <tr>
             <td>Id: </td>
             <td>Name: </td>
-            <td> </td>
-            <td></td>
+            <td> Edit </td>
+            <td> Delete</td>
         </tr>
     </thead>
     <tbody>
