--- a/Pages/Products.razor
+++ b/Pages/Products.razor
@@ -8,8 +8,8 @@
 <table class="table">
     <thead>
         <tr>
-            <td>Id: </td>
-            <td>Name: </td>
+            <td>Id </td>
+            <td>Name </td>
             <td> Edit </td>
             <td> Delete</td>
         </tr>
